docs/v1.4.5/zh/api/core-extra/AgentSaveData.md
<!-- BEGIN BREADCRUMB -->
**首页** → **API 目录** → **本领域** → `AgentSaveData`
- [← 本领域 / 返回 core-extra](./)
- [↑ API 目录](../)
- [🏠 首页 v1.4.5](../../)
- [⭐ 版本架构](../../architecture/)
<!-- END BREADCRUMB -->
# AgentSaveData

**Namespace:** TaleWorlds.Core
**Module:** TaleWorlds.Core
**Type:** `public struct AgentSaveData`
**Base:** 无
**File:** `Bannerlord.Source/bin/TaleWorlds.Core/TaleWorlds.Core/AgentSaveData.cs`

## 概述

`AgentSaveData` 更像一个数据载体：它封装一组字段，让系统之间以结构化方式交换状态。

## 心智模型

把 `AgentSaveData` 当作一个 Data 型扩展点来理解：先确认谁创建它、谁持有它、谁调用它，再决定是继承、组合还是只读使用。

## 主要方法

### AgentSaveData
`public struct AgentSaveData(string characterStringId, MatrixFrame spawnFrame, string agentSpawnPointTags, int agentSeed)`

**用途 / Purpose:** 处理 `agent save data` 相关逻辑。

### UpdateSpawnFrame
`public void UpdateSpawnFrame(MatrixFrame spawnFrame)`

**用途 / Purpose:** 更新 `spawn frame` 的状态或数据。

### AutoGeneratedStaticCollectObjectsAgentSaveData
`public static void AutoGeneratedStaticCollectObjectsAgentSaveData(object o, List<object> collectedObjects)`

**用途 / Purpose:** 处理 `auto generated static collect objects agent save data` 相关逻辑。

## 使用示例

```csharp
var value = new AgentSaveData();
```

## 参见

- [完整类目录](../catalog)